<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Place your Order"
                android:textSize="38sp"
                android:textColor="@color/colorPrimary"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/black"
                android:id="@+id/name_input_layout">
                <EditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColorHint="@android:color/black"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/name"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="@android:color/black"
                android:layout_height="wrap_content"
                android:id="@+id/email_input_layout">
                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColorHint="@android:color/black"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/email"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/black"
                android:id="@+id/city_input_layout">
                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@android:color/black"
                    android:hint="@string/address_number"/>
            </android.support.design.widget.TextInputLayout>


            <!-- Spinner Dropdown -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edit"
                android:id="@+id/wrap_spinner">
                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:prompt="@string/order"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:spinnerMode="dropdown"

                    />
            </RelativeLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/black"
                android:id="@+id/pass_input_layout">
                <EditText
                    android:id="@+id/number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="phone"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@android:color/black"
                    android:hint="@string/number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/black"
                android:id="@+id/cpass_input_layout">
                <EditText
                    android:id="@+id/dod"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColorHint="@android:color/black"
                    android:inputType="datetime"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/dod"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/black"
                android:id="@+id/add_input_layout">
                <EditText
                    android:id="@+id/add"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColorHint="@android:color/black"
                    android:inputType="text"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/additional"/>
            </android.support.design.widget.TextInputLayout>



            <Button
                android:text="@string/send"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/send"
                android:textColor="@android:color/white"
                android:background="@drawable/signupbtn"
                android:layout_weight="1" />

            <TextView
                android:text="@string/slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="30dp"
                android:textSize="10sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/textView" />


        </LinearLayout>


    </ScrollView>
</RelativeLayout>
